utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/valid/RequiredAttributesTool.ac
package valid

tool RequiredAttributesTool {
    path "some/awesome/path" resolved from CWD

    artifact SOME_RESOURCE {
        path "some/other/awesome/path" resolved from CWD
    }
}
