utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/invalid/RequiredAttributesTool.ac
package invalid

tool RequiredAttributesTool {
    artifact SOME_RESOURCE {
    }
}
